<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufpi.easii.es.vendedistraido.view.CadastraCorretorActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_margin="25dp"
        android:orientation="vertical">
        <EditText
            style="@style/DefaltEditText"
            android:id="@+id/cadastra_corretor_edt_nome"
            android:hint="@string/nome"/>
        <EditText
            style="@style/DefaltEditText"
            android:id="@+id/cadastra_corretor_edt_telefone"
            android:hint="@string/telefone"/>
        <EditText
            style="@style/DefaltEditText"
            android:id="@+id/cadastra_corretor_edt_email"
            android:hint="@string/email"/>
        <EditText
            style="@style/DefaltEditText"
            android:id="@+id/cadastra_corretor_edt_senha"
            android:hint="@string/senha"/>
        <EditText
            style="@style/DefaltEditText"
            android:id="@+id/cadastra_corretor_edt_confirme_senha"
            android:hint="@string/confirmar_senha"/>
        <Button
            style="@style/DefaltButton"
            android:text="@string/cadastrar"/>
    </LinearLayout>
</RelativeLayout>
