<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.gestor.GestorActivity"
    tools:showIn="@layout/activity_gestor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            style="@style/DefaltButton"
            android:id="@+id/gestor_btn_cadastrar_corretor"
            android:text="@string/cadastrar_corretor"/>
        <Button
            style="@style/DefaltButton"
            android:id="@+id/gestor_btn_listar_corretor"
            android:text="@string/listar_corretor"/>
        <Button
            style="@style/DefaltButton"
            android:id="@+id/gestor_btn_excluir_corretor"
            android:text="@string/excluir_corretor"/>
        <Button
            style="@style/DefaltButton"
            android:id="@+id/gestor_btn_imoveis"
            android:text="@string/imoveis"/>
        <Button
            style="@style/DefaltButton"
            android:id="@+id/gestor_btn_relatorios"
            android:text="@string/relatorios"/>
    </LinearLayout>
</RelativeLayout>
