<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.corretor.CadastraImovelActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:layout_margin="0dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_margin="25dp"
        android:orientation="vertical">
        <EditText
            style="@style/DefaltEditText"
            android:id="@+id/cadastra_imovel_edt_titulo"
            android:hint="@string/titulo"/>
        <EditText
            style="@style/DefaltEditText"
            android:id="@+id/cadastra_imovel_edt_valor"
            android:hint="@string/valor"/>
        <EditText
            style="@style/DefaltEditText"
            android:id="@+id/cadastra_imovel_edt_endereco"
            android:hint="@string/endereco"/>
        <EditText
            style="@style/DefaltEditText"
            android:layout_height="100dp"
            android:id="@+id/cadastra_imovel_edt_descricao"
            android:hint="@string/descricao"
            android:inputType="textImeMultiLine"
            android:lines="8"
            android:minLines="5"
            android:gravity="top|left"
            android:maxLines="10"
            android:scrollbars="vertical"/>
        <Button
            style="@style/DefaltButton"
            android:id="@+id/cadastra_imovel_btn_imagens"
            android:text="@string/carregar_imagens" />
        <Button
            style="@style/DefaltButton"
            android:id="@+id/cadastra_imovel_btn_cadastrar"
            android:text="@string/adicionar_localizacao"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>