<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufpi.easii.es.vendedistraido.view.GestorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="25dp">
        <Button
            style="@style/DefaltButton"
            android:id="@+id/gestor_btn_corretores"
            android:text="@string/corretores"/>
        <Button
            style="@style/DefaltButton"
            android:id="@+id/gestor_btn_imoveis"
            android:text="@string/imoveis"/>
        <Button
            style="@style/DefaltButton"
            android:id="@+id/gestor_btn_relatorios"
            android:text="@string/relatorios"/>
    </LinearLayout>
</RelativeLayout>